Added file wtching for c# app assembly to automaticly reload changes
- also added main thread queue to application class
- fixed file watch for shaderwatch

--- a/VanK-Editor/CMakeLists.txt
+++ b/VanK-Editor/CMakeLists.txt
@@ -92,7 +92,7 @@ add_custom_command(TARGET VanK-Editor POST_BUILD
 )
 
 set(SOURCE_CONTENT_DIR "${CMAKE_SOURCE_DIR}/VanK-Editor/assets/content")
-set(DESTINATION_CONTENT_DIR "${CMAKE_BINARY_DIR}/VanK-Editor/content")
+set(DESTINATION_CONTENT_DIR "${CMAKE_BINARY_DIR}/VanK-Editor/Debug")
 
 if(NOT EXISTS ${CMAKE_BINARY_DIR}/content_copied.stamp)
     file(COPY ${SOURCE_CONTENT_DIR} DESTINATION ${DESTINATION_CONTENT_DIR})
