Fixed release build crash + more
- fixed crashing when trying to remove entity
- added bsaic project system
- vank will now prompt to open project on startup if not command line args are set
- added UI::ScopedStyleColer utility class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_compile_options("/utf-8")
 
+add_compile_definitions($<$<CONFIG:Debug>:VK_DEBUG>)
+
 # Add subdirectories
 add_subdirectory(VanK)
 add_subdirectory(SandBox)
